--- a/src/styles/_plans.scss
+++ b/src/styles/_plans.scss
@@ -1,47 +1,65 @@
-.plans{
+.plans {
     padding: 5.6vw;
 
-    h2{
+    h2 {
         text-align: center;
     }
 
-    &__list{
+    &__list {
         display: flex;
         justify-content: space-around;
         margin-top: 50px;
 
-        @media (max-width: 768px){
+        @media (max-width: 768px) {
             display: block;
+            padding: 0 1.2rem;
+            text-align: center;
+            /* fallback para elementos inline */
         }
-        
-        .button{
+
+        .button {
             margin-top: 24px;
         }
 
-        &__item{
+        &__item {
             text-align: center;
             padding: 60px 44px 44px;
             max-width: 380px;
             width: 100%;
 
-            &:nth-child(2){
+            &:nth-child(2) {
                 background-image: url(../images/fundo_combo_plus.png);
                 background-repeat: no-repeat;
                 background-size: contain;
             }
 
-            img{
+            img {
                 height: 83px;
+                display: block;
+                margin: 0 auto;
+                max-width: 100%;
             }
 
             strong {
                 display: block;
                 margin-top: 24px;
             }
+
+            /* Mobile */
+            @media (max-width: 768px) {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: flex-start;
+                width: 100%;
+                max-width: 420px;
+                margin: 0 auto 24px;
+                padding: 36px 20px;
+            }
         }
     }
 
-    p{
+    p {
         text-align: center;
     }
 }
